=== rmw ChangeLog ===

2017-11-26

    Martijn de Boer tested rmw on his MacOSX system today. To get a complete build,
    the only thing he needed was an additional line: '#include <locale.h>`.
    I've updated a couple spots on the rmw repo and wiki to indicate the rmw is
    a "Linux and MacOS utility".

2017-11-22

    -t --translate option added
        After translations are added, this option will display a translation
        of a default configuration file.

    strings prepared for translation, portable object template completed

2017-11-21

    Version number changed to 0.4.00

2017-11-17

    nl (Nederlands/Dutch) man page and po file added. Thanks @sexybiggetje

2017-11-14

    [#106] `make install` now installs the following man pages to the
    appropriate directories:

    * en
    * de
    * es
    * fi
    * pl
    * pt_BR

    Thank you for the tip, @suve.

2017-10-25

    [#68] File sizes now display when using '--select'

2017-10-15

    Man pages added!
    * Languages: EN, DE, FI, ES, PT, PL

    At this time, only the EN man page is installed. I don't know the
    proper way to install man pages in other languages.

2016-10-02

    Restore(): no longer takes type *char[] as an argument, only *char,
    which makes for much easier maintenance of code. Affected a few
    other functions as well (see diff if really curious).

2016-10-01

    Renamed mkinfo() to create_trashinfo()

2016-09-26

    No longer using var: waste_dirs_total & protected_dir_total.
        NULL is assigned as the last WASTE folder, so loops check for NULL
        to see when it's time to quit.

    undo_file (lastrmw) is now removed after -u is used (#58)

2016-09-25

    -p, --pause option removed

    -o, --orphaned option added
        create trashinfo files if no corresponding trashinfo is found (#16)

2016-09-18

    Issue #40 - To empty the trash, preface rmw on the command line
    with 'RMWTRASH=empty'. Example:
    RMWTRASH=empty rmw ....
